adding resources status
